test/modules/shadowing/issue-19167-5-x.good
issue-19167-5-x.chpl:13: error: symbol x is multiply defined
issue-19167-5-x.chpl:3: note: also defined here
